some more functions

--- a/src/views/bottombar.kv
+++ b/src/views/bottombar.kv
@@ -17,7 +17,7 @@
     MDIconButton:
         theme_icon_color:"Custom"
         icon_color:app.theme_cls.primary_dark
-        on_release:root.run()
+        on_release:print(root.run)
         icon:root.icon
         icon_size:dp(40)
 
